# git-se2

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  difflistitem.cpp  difflistitem.h  difftreeitem.cpp  difftreeitem.h  difftreemodel.cpp  difftreemodel.h  error-handling.cpp  error-handling.h  git-etcetera.h  main.cpp  program_options.cpp  program_options.h  repository.cpp  repository.h  squashdiff.cpp  squashdiff.h  squashdifflist.cpp  squashdifflist.h
